--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@heroicons/react": "^1.0.6",
     "chart.js": "^4.4.4",
     "framer-motion": "^11.11.8",
+    "my-app": "file:",
     "next": "14.2.15",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
